<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">&#160;LEO Privacy&#160;</string>
    <string name="app_lock">"App Lock"</string>
    <string name="lock">Lock</string>
    <string name="button_backup">Backup</string>
    <string name="button_install">Install</string>
    <string name="button_delete">Delete</string>
    <string name="set_gesture_suc">Pattern lock set successfully</string>
    <string name="reset_passwd_successful">Reset Successfully</string>
    <string name="makesure">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="reset_passwd">Reset password</string>
    <string name="please_wait">Please try again later</string>
    <string name="passwd_question">Question: </string>
    <string name="passwd_anwser">Answer:</string>
    <string name="accelerate">Boost</string>
    <string name="passwd_tip">Please enter a password hint</string>
    <string name="qusetion_cant_null">Question cannot be empty</string>
    <string name="aneser_cant_null">Please enter your answer</string>
    <string name="pleas_input_anwser">Answer your security question</string>
    <string name="tips">Prompts</string>
    <string name="please_input_gesture">Draw pattern to unlock</string>
    <string name="switch_gesture">Change to pattern</string>
    <string name="setting">Settings</string>
    <string name="passwd_hint_tip">Password Prompt: </string>
    <string name="set_protect_or_not">Security Question</string>
    <string name="set_success">Set successfully</string>
    <string name="reset_gesture_passwd">Reset your pattern</string>
    <string name="lock_right_now">Immediately</string>
    <string name="lock_15_sec">15 Seconds</string>
    <string name="lock_30_sec">30 Seconds</string>
    <string name="lock_1_min">1 Minute</string>
    <string name="lock_3_min">3 Minutes</string>
    <string name="lock_5_min">5 Minutes</string>
    <string name="app_version">Version: %1$s</string>
    <string name="backuping">Backing up: %1$s</string>
    <string name="no_application_selected">Please select an App</string>
    <string name="backup_finish">Backup completed!</string>
    <string name="delete_fail">Delete Failed</string>
    <string name="deleting_app">Deleting: %1$s</string>
    <string name="installed_app_size">Installed Apps: %1$d</string>
    <string name="storage_size">Free space:%1$s</string>
    <string name="unavailable">Unavailable</string>
    <string name="bakup_fail_cancel">Backup Canceled</string>
    <string name="bakup_fail_full">Storage space too low</string>
    <string name="bakup_fail_unavailable">SD card not available</string>
    <string name="no_app_backuped">No backup Apps</string>
    <string-array name="lock_time_entrys">
        <item>@string/lock_right_now</item>
        <item>@string/lock_15_sec</item>
        <item>@string/lock_30_sec</item>
        <item>@string/lock_1_min</item>
        <item>@string/lock_3_min</item>
        <item>@string/lock_5_min</item>
    </string-array>
    <string-array name="lock_time_items">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string name="passwd_protect">Security Question</string>
    <string name="change_passwd">Change Password</string>
    <string name="passwd_notify">Password Prompt</string>
    <string name="query_delete">Delete backup file of %1$s? It can\'t be restored after the deletion.</string>
    <string name="backuped_count">%1$d apps backed up successfully. Backup path:%2$s</string>
    <string name="category_lock">App Lock</string>
    <string name="app_image_gallery">Gallery</string>
    <string name="app_select_all">Select All</string>
    <string name="app_select_none">Cancel</string>
    <string name="app_hide_image">Hide</string>
    <string name="app_cancel_hide_image">Unhide</string>
    <string name="app_add_hide_image">Add</string>
    <string name="app_unhide_dialog_content">Unhide this image ?</string>
    <string name="app_delete_dialog_content">Delete this image ?</string>
    <string name="gestur_passwd_function_hint">Connect at least four dots</string>
    <string name="gesture_start_hint">Lift your finger to finish</string>
    <string name="make_passwd">Re-enter to confirm</string>
    <string name="input_again">Please enter again</string>
    <string name="reset_digital_passwd">Reset your passcode</string>
    <string name="about_copy">Copyright © 2016 LEOMASTER. All Rights Reserved</string>
    <string name="app_wall_network">Network Error. Please try again later.</string>
    <string name="app_wall_click">Try again</string>
    <string name="protocolBar">Privacy Policy</string>
    <string name="passwd_set_gesture_tip">Connect at least 4 dots</string>
    <string name="new_install_lock_remind">You have installed %1$s. Set a lock for it?</string>
    <string name="localtheme">Local</string>
    <string name="onlinetheme">Online</string>
    <string name="defaultTheme">Default</string>
    <string name="lock_more">More</string>
    <string name="ParadoxTheme">Spatial</string>
    <string name="locker_uninstall">Uninstall</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Loading</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="find_new_theme">New Themes</string>
    <string name="locker_clean">Optimized successfully up to %1$s</string>
    <string name="setting_locker_clean">Unlock to boost</string>
    <string name="app_unhide_dialog_content_video">Unhide this video ?</string>
    <string name="app_delete_dialog_content_video">Delete this video ?</string>
    <string name="circle_lock_tip_text">Apps Locked</string>
    <string name="circle_lock_empty_tip_text">No Apps Locked </string>
    <string name="googlePlayGuide">Pull down to rate</string>
    <string name="no_more_business_app">No more new Apps.</string>
    <string name="no_business_app">No more new Apps.</string>
    <string name="folder_new">NEW</string>
    <string name="new_app_tip_content">Find hot apps here!</string>
    <string name="new_app_tip_title">New Apps!</string>
    <string name="recomment_list_title">Guest Mode enabled! Lock your Apps.</string>
    <string name="help_setting_tip_title">Prompts</string>
    <string name="lock_help_password_setting_content_password">Click Settings to enter password or reset password.</string>
    <string-array name="lock_help_setting_title">
        <item>How to change password?</item>
        <item>Locking too frequently?</item>
        <item>Change a theme</item>
    </string-array>
    <string name="lock_help_password_setting_button">Go to Settings</string>
    <string name="lock_help_lock_theme_setting_button">Change a theme</string>
    <string name="privacy_contacts">Private Contact</string>
    <string name="privacy_sms">Private SMS</string>
    <string name="privacy_call">Private Calls</string>
    <string name="privacy_contact_message">SMS</string>
    <string name="privacy_contact_contact">Contacts</string>
    <string name="privacy_contact_popumenus_add_new_privacy_contact">Add a private contact</string>
    <string name="privacy_message_progress_dialog_content">Importing…Please wait.</string>
    <string name="privacy_contact_activity_input_edit_name">Name</string>
    <string name="privacy_contact_activity_input_edit_number">Phone Number<Data><![CDATA[<b><font color="#ff0000">＊</font></b>]]></Data></string>
    <string name="privacy_contact_activity_input_checkbox_hangup">Decline</string>
    <string name="privacy_contact_notification_title_small">You got a new message</string>
    <string name="privacy_add_contact_toast">This number already existed!</string>
    <string name="privacy_contact_add_log_dialog_title">Import data?</string>
    <string name="privacy_contact_add_log_dialog_dialog_content">Import SMS and call log from these numbers? Data will be erased from previous location.</string>
    <string name="privacy_contact_progress_dialog_content">Importing…Please wait.</string>
    <string name="privacy_contact_checkbox_dlg_content">Are you sure to remove this person from Private Contacts?</string>
    <string name="privacy_contact_checkbox_dlg_checktext">Restore Contact Info</string>
    <string name="privacy_contact_edit_contact">Edit private contact</string>
    <string name="privacy_contact_edit_content">Save?</string>
    <string name="privacy_message_delete_message">Are you sure to delete the message?</string>
    <string name="privacy_message_resotre_message">Are you sure to recover the messages back to your phone?</string>
    <string name="privacy_call_delete_call_log">Are you sure to delete the call log?</string>
    <string name="privacy_contact_default_text">Add a private contact</string>
    <string name="privacy_message_default_text">Encrypt your SMS</string>
    <string name="privacy_caontact_dialog_call">Call</string>
    <string name="privacy_contact_toast_no_choose">Select a number</string>
    <string name="privacy_message_item_send_message_fail">Failed to send SMS!</string>
    <string name="privacy_contact_text">Hide your SMS</string>
    <string name="no_image_hide_dialog_button">OK</string>
    <string name="image_hide_memery_insuficient_dialog_button">OK</string>
    <string name="unlock_theme">Themes</string>
    <string name="lock_setting">Settings</string>
    <string name="battery_info_status_charging_ac">（Alternating current）</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Sufficient power</string>
    <string name="app_application">Apps</string>
    <string name="unknow_call_first_title">Unknown Number</string>
    <string name="clean_mem_notify_big">Exceed storage</string>
    <string name="clean_mem_notify_big_right">65%</string>
    <string name="clean_mem_notify_small">Boost</string>
    <string name="clean_mem_notify_boost">Boost</string>
    <string name="secur_help_tip_txt">This function will protect your privacy and help you find your lost mobile. To use it, you must preset a mobile number, and when the mobile is lost, send SMS via the preset number.</string>
    <string name="secur_help_bt">OK</string>
    <string name="monitor_new_app">New apps</string>
    <string name="monitor_new_vid">New videos</string>
    <string name="secur_feedbk_content">Anti-theft functions not enabled</string>
    <string name="unknow_call_thrid_first_title">Instruction</string>
    <string name="unknow_call_all_content">Slide to unlock from Decline, SMS and Answer in order</string>
    <string name="pri_monitor_app_summ">Monitor new apps</string>
    <string name="pri_monitor_pic_summ">Monitor new images</string>
    <string name="pri_monitor_vid_summ">Monitor new videos</string>
    <string name="security_guide_button_text">Enable now</string>
    <string name="monitor_new_pic">New images</string>
    <string name="secur_kno_model_msm_click">Authorize now>>></string>
    <string name="secur_help_feedback_tip_button">Contact us</string>
    <string name="unknow_call_second_title">Incoming Call</string>
    <string name="secur_mody_num">Change</string>
    <string name="secur_close">Disable Anti-Theft</string>
    <string name="secur_normal_function">Basic Function</string>
    <string name="secur_instr_tip">How Anti-Theft function works?</string>
    <string name="secur_adv_function">Advanced Function</string>
    <string name="secur_save_num">Reserved number:</string>
</resources>