<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notify_app"
        android:layout="@layout/pref_list_item_top"
        android:summary="@string/pri_monitor_app_summ"
        android:title="@string/monitor_new_app"
        android:widgetLayout="@layout/pref_widget_checkbox" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notify_pic"
        android:layout="@layout/pref_list_item_mid"
        android:summary="@string/pri_monitor_pic_summ"
        android:title="@string/monitor_new_pic"
        android:widgetLayout="@layout/pref_widget_checkbox" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notify_vid"
        android:layout="@layout/pref_list_item_mid"
        android:summary="@string/pri_monitor_vid_summ"
        android:title="@string/monitor_new_vid"
        android:widgetLayout="@layout/pref_widget_checkbox" />
</PreferenceScreen>