<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlag_rt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dlg_title_layout"
        android:layout_width="@dimen/dlg_horizental_margin"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/dlg_icon"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/dlg_title"
            style="@style/dlg_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:text="@string/tips"
            android:visibility="visible" />

        <TextView
            android:id="@+id/dlg_content"
            style="@style/dlg_content_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:gravity="center"
            android:maxLines="4"
            android:scrollbars="vertical"
            android:text="content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dlg_2btn_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_btn_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dlg_left_btn"
            style="@style/dlg_left_button_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/dlg_mid_btn"
            style="@style/dlg_mid_button_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/app_application" />

        <TextView
            android:id="@+id/dlg_right_btn"
            style="@style/dlg_third_button_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/makesure" />

    </LinearLayout>

</LinearLayout>