<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_weizhuang_firstin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/disguise_call_bg1" >

        <TextView
            android:id="@+id/call_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/unknow_call_second_title"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/call_phone"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="7dp"
            android:text="@string/unknow_call_first_title"
            android:textColor="@color/white"
            android:textSize="46dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black" >

        <TextView
            android:id="@+id/tv_use_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:text="@string/unknow_call_thrid_first_title"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_use_tips_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_use_tips"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="14dp"
            android:text="@string/unknow_call_all_content"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:visibility="invisible" />
    </RelativeLayout>

    <com.leo.appmaster.applocker.GestureRelative
        android:id="@+id/mid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/disguise_call_person"
        android:longClickable="true" >

        <ImageView
            android:id="@+id/iv_dianhua_hold"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@id/tv_use_tips_content"
            android:background="@drawable/disguise_call"
            android:longClickable="true" />
    </com.leo.appmaster.applocker.GestureRelative>

</LinearLayout>