<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/content_game_all_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/appwallIV"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:src="@drawable/boosticon" />

        <LinearLayout
            android:id="@+id/appwall_mid_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/appwallIV"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/appwallNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_mem_notify_big"
                    android:textColor="@color/cool_red"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/app_precent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/appwallNameTV"
                    android:text="@string/clean_mem_notify_big_right"
                    android:textColor="@color/cool_red"
                    android:textSize="15dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/appwallDescTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/clean_mem_notify_small"
                android:textColor="@color/c3"
                android:textSize="12dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/appwall_left"
            android:layout_width="73dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/clr_mem_noti_bt" >

            <TextView
                android:id="@+id/free_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/clean_mem_notify_boost"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
