<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:leo="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <com.leo.appmaster.ui.CommonToolbar
        android:id="@+id/phone_security_commonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!--2-0-->
    <ScrollView
        android:id="@+id/secur_phone_nub_sc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/phone_security_commonbar"
        android:overScrollMode="never">

        <RelativeLayout
            android:id="@+id/secur_top_rt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- 开启手机防盗后顶部UI -->
            <include
                android:id="@+id/show_time_lt"
                layout="@layout/secur_open_time_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/secur_open_ui_iv_width"
                android:layout_centerHorizontal="true">
            </include>

            <LinearLayout
                android:id="@+id/secur_num_oper_lt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/show_time_lt"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secur_save_num"
                    />

                <TextView
                    android:id="@+id/secur_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13856932225"/>

                <Button
                    android:id="@+id/secur_mody_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secur_mody_num"/>

                <Button
                    android:id="@+id/secur_colse_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secur_close"/>
            </LinearLayout>

            <TextView
                android:id="@+id/secur_nromal_tip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/secur_num_oper_lt"
                android:text="@string/secur_normal_function"/>

            <TextView
                android:id="@+id/secur_instru_tip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/secur_num_oper_lt"
                android:text="@string/secur_instr_tip"/>

            <GridView
                android:id="@+id/secur_open_normal_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/secur_nromal_tip_tv"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/open_suc_lv_tp"
                android:divider="@null"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:overScrollMode="never"
                android:scrollbars="none"></GridView>

            <TextView
                android:id="@+id/secur_adv_tip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/secur_open_normal_lv"
                android:text="@string/secur_adv_function"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/secur_adv_tip_tv">

                <GridView
                    android:id="@+id/secur_open_adv_lv"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="3"
                    android:overScrollMode="never"
                    android:scrollbars="none"></GridView>

                <Button
                    android:id="@+id/secur_open_adv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/secur_open_adv_lv"
                    android:text="@string/security_guide_button_text"
                    ></Button>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <!--2.3手机防盗帮助页面-->
    <RelativeLayout
        android:id="@+id/secur_help_RL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/phone_security_commonbar"
        android:background="@color/white"
        android:visibility="gone">
        <!--    android:visibility="gone"-->
        <ImageView
            android:id="@+id/help_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/secur_help_iv_margin_top"
            android:src="@drawable/theft_guide_img"/>

        <TextView
            android:id="@+id/help_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/secur_help_tv_margin_top"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/secur_help_tip_txt"
            android:textColor="#666666"
            android:textSize="14dp"/>

        <com.leo.appmaster.ui.MaterialRippleLayout
            android:id="@+id/secur_help_rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/secur_help_rp_margin_top"
            leo:rippleAlpha="0.5"
            leo:rippleColor="@color/button_blue_ripple"
            leo:rippleDuration="250"
            leo:rippleHover="true"
            leo:rippleOverlay="true">

            <Button
                android:id="@+id/help_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/app_done_btn"
                android:gravity="center"
                android:text="@string/secur_help_bt"
                android:textColor="@color/white"
                android:textSize="14dp"/>
        </com.leo.appmaster.ui.MaterialRippleLayout>

        <RelativeLayout
            android:id="@+id/no_know_model_help_tip_RT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c4"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/know_feekback_RV"
                android:clickable="true"
                android:paddingBottom="13dp"
                android:paddingLeft="36dp"
                android:paddingTop="13dp">

                <TextView
                    android:id="@+id/no_know_mod_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secur_feedbk_content"
                    android:textColor="#333333"
                    android:textSize="16dp"/>
            </RelativeLayout>

            <com.leo.appmaster.ui.MaterialRippleLayout
                android:id="@+id/know_feekback_RV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="22dp"
                leo:rippleAlpha="0.5"
                leo:rippleColor="@color/white_list_item_ripple"
                leo:rippleDuration="250"
                leo:rippleHover="true"
                leo:rippleOverlay="true">

                <Button
                    android:id="@+id/know_feekback_bt"
                    android:layout_width="104dp"
                    android:layout_height="34dp"
                    android:background="@drawable/green_btn_selector"
                    android:text="@string/secur_help_feedback_tip_button"
                    android:textColor="#15c937"
                    android:textSize="14dp"/>
            </com.leo.appmaster.ui.MaterialRippleLayout>
        </RelativeLayout>
        <!--已知需要短信权限的机型提示-->
        <LinearLayout
            android:id="@+id/secur_know_msm_LT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c4"/>

            <TextView
                android:id="@+id/secur_know_msm_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="请在“授权管理”的“应用权限管理”项中选中“应用管理TAB”，选择“隐私卫士”，授予“读取短信，发送短信”权限。"
                android:textColor="#333333"
                android:textSize="13dp"/>

            <TextView
                android:id="@+id/secur_know_msm_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="@string/secur_kno_model_msm_click"
                android:textColor="#009cff"
                android:textSize="16dp"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
